@@ -2,7 +2,9 @@
 #define _kchartWIZARDLABELSLEGENDPAGE_H
 
 #include <qwidget.h>
-
+#include <qpushbutton.h>
+#include <kcolorbtn.h>
+#include <qcolor.h>
 class QLineEdit;
 class QRadioButton;
 class KChartPart;
@@ -10,15 +12,21 @@ class kchartWidget;
 
 class kchartWizardLabelsLegendPage : public QWidget
 {
-  Q_OBJECT 
+  Q_OBJECT
 
 public:
   kchartWizardLabelsLegendPage( QWidget* parent, KChartPart* chart );
   ~kchartWizardLabelsLegendPage();
 
-  void placementChanged( int );
+  //void placementChanged( int );
 public slots:
   void apply();
+  void changeXLabelFont();
+  void changeYLabelFont();
+  void changeTitleFont();
+  void changeXLabelColor(const QColor &);
+  void changeYLabelColor(const QColor &);
+  void changeTitleColor(const QColor &);
 private:
   KChartPart* _chart;
   kchartWidget* preview;
@@ -31,6 +39,19 @@ private:
   QRadioButton* _bottomleftRB;
   QRadioButton* _bottomcenterRB;
   QRadioButton* _bottomrightRB;
+  QPushButton *xtitlefont;
+  QPushButton *ytitlefont;
+  QPushButton *titlefont;
+  KColorButton *xtitlecolor;
+  KColorButton *ytitlecolor;
+  KColorButton *titlecolor;
+  QFont xlabel;
+  QFont ylabel;
+  QFont title;
+  QColor x_color;
+  QColor y_color;
+  QColor title_color;
+
 };
 
 
